--- a/index.html
+++ b/index.html
@@ -421,9 +421,7 @@
                                 </div>
                             </div>
                             <div id='freeem' class="ocultar p-4 textEsp">
-                                <p>- Ui/Ux Design</p>
-                                <p>- Protoripação, definição de fluxo</p>
-                                <p>- Figma</p>
+                                <p>Implantação, parametrização e capacitação do ERP PROTHEUS, módulos Gestão de Pessoal, TAF e Medicina e Segurança do Trabalho.</p>
                             </div>
                             <div id="btn-veja-menos-vpo" class="ocultar">
                                 <div class="d-flex justify-content-center mt-2 ">
@@ -443,8 +441,7 @@
                                 </div>
                             </div>
                             <div id='freeem' class="ocultar p-4 textEsp">
-                                <p>- Desenvolvedora Front-end.</p>
-                                <p>- React, Redux, Bootstrap, Figma.</p>
+                                <p>Desenvolvimento de sistemas utilizando a linguagem PHP, o framework Codeigniter e consultas no SQL Server. Documentações dos sistemas desenvolvidos seguindo os padrões de projetos.</p>
                             </div>
                             <div id="btn-veja-menos-freeem" class="ocultar">
                                 <div class="d-flex justify-content-center mt-2 ">
@@ -464,12 +461,7 @@
                                 </div>
                             </div>
                             <div id='zallpy' class="ocultar p-4 textEsp">
-                                <p>- Migração do sistema interno da empresa para uma tecnologia mais atual (React,
-                                    Redux).</p>
-                                <p>- Reformulação das telas, melhorando a experiência do usuário e a performance do
-                                    sistema.</p>
-                                <p>- Alteração do formato dos dados vindos do Back-end.</p>
-                                <p>- Refatoração do Back-end (PHP).</p>
+                                <p>Resolução de chamados de falhas no sistema de um grande cliente utilizando as linguagens clipper, Xharbour e consultas ao SQL.</p>
                             </div>
                             <div id="btn-veja-menos-zallpy" class="ocultar">
                                 <div class="d-flex justify-content-center">
@@ -489,10 +481,8 @@
                                 </div>
                             </div>
                             <div id='onSign' class='ocultar p-4 textEsp'>
-                                <p>- Codificar Apps para Digital Signage compatíveis em todas as plataformas
-                                    (televisões, sistemas
-                                    operacionais e navegadores).</p>
-                                <p>- JavaScript, CSS e HTML. </p>
+                                <p>Suporte técnico a software, hardware presencial e remoto. Backup, formatação de equipamentos, microcomputadores, impressoras, servidores e redes(Cabeamento e crimpagem de cabos).
+                                </p>
                             </div>
 
                             <div id="btn-veja-menos-onSign" class="ocultar">
@@ -513,14 +503,7 @@
                                 </div>
                             </div>
                             <div id='pf' class='ocultar p-4 textEsp'>
-                                <p>- Reestruturação do sistema interno da empresa.</p>
-                                <p>- Reformulação das telas, melhorando a experiência do usuário e a performance do
-                                    sistema.</p>
-                                <p>- Levantamento e priorização dos requisitos.</p>
-                                <p>- Organização e planejamento da equipe.</p>
-                                <p>- Documentação.</p>
-                                <p>- Mapeamento de processos.</p>
-                                <p>- Realização de testes automatizados. </p>
+                                <p>Pedidos de compra da engenharia de infraestrutura e de ADSL através do sistema ERP SAP, conexãde lp's em plataformas de eventos de baixa velocidade.</p>
                             </div>
                             <div id="btn-veja-menos-pf" class="ocultar">
                                 <div class="d-flex justify-content-center">
@@ -533,7 +516,7 @@
                 <div class="d-flex justify-content-center mt-4">
                     <button class="btn btn-outline-light">
                         <a class='item-rodape' target="_blank"
-                            href="https://drive.google.com/open?id=1hnxDrZpXprjtq-N4A2dHQqM3Vf3WdU6Enpf2e6O9Fw0">
+                            href="https://drive.google.com/file/d/1gLH0TQ1u57LB7EdpivmiXQCCK_L3VuO9/view?usp=sharing">
                             Currículo completo
                         </a>
                     </button>
